; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kdp/ml/arm/extr_kdp_vm.c_kdp_machine_vm_read.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kdp/ml/arm/extr_kdp_vm.c_kdp_machine_vm_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64 }

@kdp_trans_off = common dso_local global i64 0, align 8
@kdp_pmap = common dso_local global i64 0, align 8
@kernel_pmap = common dso_local global i64 0, align 8
@kdp_read_io = common dso_local global i32 0, align 4
@ARM_PGBYTES = common dso_local global i32 0, align 4
@PAGE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kdp_machine_vm_read(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca %struct.TYPE_3__, align 8
  %16 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %17 = load i64, i64* %5, align 8
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %8, align 4
  %19 = load i64, i64* %6, align 8
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %9, align 4
  %21 = load i64, i64* @kdp_trans_off, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %32

23:                                               ; preds = %3
  %24 = load i64, i64* %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  store i64 %24, i64* %25, align 8
  %26 = load i32, i32* %7, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store i64 %27, i64* %28, align 8
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @kdp_machine_phys_read(%struct.TYPE_3__* %15, i64 %29, i32 0)
  store i32 %30, i32* %16, align 4
  %31 = load i32, i32* %16, align 4
  store i32 %31, i32* %4, align 4
  br label %113

32:                                               ; preds = %3
  %33 = load i32, i32* %7, align 4
  store i32 %33, i32* %12, align 4
  %34 = load i64, i64* @kdp_pmap, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %32
  %37 = load i64, i64* @kdp_pmap, align 8
  store i64 %37, i64* %14, align 8
  br label %40

38:                                               ; preds = %32
  %39 = load i64, i64* @kernel_pmap, align 8
  store i64 %39, i64* %14, align 8
  br label %40

40:                                               ; preds = %38, %36
  br label %41

41:                                               ; preds = %93, %40
  %42 = load i32, i32* %12, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %107

44:                                               ; preds = %41
  %45 = load i64, i64* @kernel_pmap, align 8
  %46 = load i32, i32* %9, align 4
  %47 = call i32 @kdp_vtophys(i64 %45, i32 %46)
  store i32 %47, i32* %11, align 4
  %48 = icmp eq i32 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %44
  br label %109

50:                                               ; preds = %44
  %51 = load i64, i64* %14, align 8
  %52 = load i32, i32* %8, align 4
  %53 = call i32 @kdp_vtophys(i64 %51, i32 %52)
  store i32 %53, i32* %10, align 4
  %54 = icmp eq i32 %53, 0
  br i1 %54, label %55, label %56

55:                                               ; preds = %50
  br label %109

56:                                               ; preds = %50
  %57 = load i32, i32* @kdp_read_io, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %68, label %59

59:                                               ; preds = %56
  %60 = load i32, i32* %11, align 4
  %61 = call i32 @pmap_valid_address(i32 %60)
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %63, label %67

63:                                               ; preds = %59
  %64 = load i32, i32* %10, align 4
  %65 = call i32 @pmap_valid_address(i32 %64)
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %68, label %67

67:                                               ; preds = %63, %59
  br label %109

68:                                               ; preds = %63, %56
  %69 = load i32, i32* @ARM_PGBYTES, align 4
  %70 = load i32, i32* %8, align 4
  %71 = load i32, i32* @PAGE_MASK, align 4
  %72 = and i32 %70, %71
  %73 = sub nsw i32 %69, %72
  store i32 %73, i32* %13, align 4
  %74 = load i32, i32* %13, align 4
  %75 = load i32, i32* @ARM_PGBYTES, align 4
  %76 = load i32, i32* %9, align 4
  %77 = load i32, i32* @PAGE_MASK, align 4
  %78 = and i32 %76, %77
  %79 = sub nsw i32 %75, %78
  %80 = icmp sgt i32 %74, %79
  br i1 %80, label %81, label %87

81:                                               ; preds = %68
  %82 = load i32, i32* @ARM_PGBYTES, align 4
  %83 = load i32, i32* %9, align 4
  %84 = load i32, i32* @PAGE_MASK, align 4
  %85 = and i32 %83, %84
  %86 = sub nsw i32 %82, %85
  store i32 %86, i32* %13, align 4
  br label %87

87:                                               ; preds = %81, %68
  %88 = load i32, i32* %13, align 4
  %89 = load i32, i32* %12, align 4
  %90 = icmp sgt i32 %88, %89
  br i1 %90, label %91, label %93

91:                                               ; preds = %87
  %92 = load i32, i32* %12, align 4
  store i32 %92, i32* %13, align 4
  br label %93

93:                                               ; preds = %91, %87
  %94 = load i32, i32* %10, align 4
  %95 = load i32, i32* %11, align 4
  %96 = load i32, i32* %13, align 4
  %97 = call i32 @bcopy_phys(i32 %94, i32 %95, i32 %96)
  %98 = load i32, i32* %13, align 4
  %99 = load i32, i32* %8, align 4
  %100 = add nsw i32 %99, %98
  store i32 %100, i32* %8, align 4
  %101 = load i32, i32* %13, align 4
  %102 = load i32, i32* %9, align 4
  %103 = add nsw i32 %102, %101
  store i32 %103, i32* %9, align 4
  %104 = load i32, i32* %13, align 4
  %105 = load i32, i32* %12, align 4
  %106 = sub nsw i32 %105, %104
  store i32 %106, i32* %12, align 4
  br label %41

107:                                              ; preds = %41
  br label %108

108:                                              ; preds = %107
  br label %109

109:                                              ; preds = %108, %67, %55, %49
  %110 = load i32, i32* %7, align 4
  %111 = load i32, i32* %12, align 4
  %112 = sub nsw i32 %110, %111
  store i32 %112, i32* %4, align 4
  br label %113

113:                                              ; preds = %109, %23
  %114 = load i32, i32* %4, align 4
  ret i32 %114
}

declare dso_local i32 @kdp_machine_phys_read(%struct.TYPE_3__*, i64, i32) #1

declare dso_local i32 @kdp_vtophys(i64, i32) #1

declare dso_local i32 @pmap_valid_address(i32) #1

declare dso_local i32 @bcopy_phys(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
